Промежуточный этап реализации